@@ -6,6 +6,7 @@ Verion 1.5.3
   adds FFT length (--chunksize) option, and is updated to behave more DiFX-like
 * m5d: adds complex decode (--double) and custom printout format (e.g., --format=%f)
 * test5b: will now report skipped frames
+* zerocorr: write results with %e to avoid scaling causing underflow results
 
 Version 1.5.2
 * Post DiFX-2.4
